assets/css/nav.css
html {
 background-color: rgba(245, 245, 245, 0.9);
}

body {
    background-color: rgba(245, 245, 245, 0.9);
}

.hero-unit {
    background-color: rgb(221, 221, 221);
}

.navbar-mooc
{
	background-color: #104080;
}
.navbar-inner {
  min-height: 40px;
  padding-right: 0px;
  padding-left: 0px;
  background-color: #104080;
  background-image: -moz-linear-gradient(top, #104080, #104080);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#104080), to(#104080));
  background-image: -webkit-linear-gradient(top, #104080, #104080);
  background-image: -o-linear-gradient(top, #1f78b3, #104080);
  background-image: linear-gradient(to bottom, #104080, #104080);
  background-repeat: repeat-x;
  border: 1px solid #d4d4d4;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff9D100D', endColorstr='#ff7D100D', GradientType=0);
  *zoom: 1;
  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
     -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
          box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
}
ul.nav li.dropdown:hover > ul.dropdown-menu {
    display: block;
    margin-top: 0px;
}
a {
	color: #274257;
	/*color: #854629;*/
}

a:hover {
  color: #274257;
  text-decoration: underline;
  /*cursor: help;*/
  /*
  cursor: help;
  			border-bottom: 1px dotted #000000; color: #000000; outline: none;
			/* cursor: help; text-decoration: none; 
			position: relative;*/
			
	/*a:hover span {display: block;*/
	/*
   position: absolute; top: 200px; left: 0; width: 125px;
   padding: 5px; margin: 10px; z-index: 100;
   color: #AAA; background: black;
   font: 10px Verdana, sans-serif; text-align: center;}*/
}

a.menu:after, .dropdown-toggle:after {
  content: none;
}
.navbar .nav > li > a {
  float: none;
  padding: 10px 15px 10px;
  color: #BBBBBB;
  text-decoration: none;
  text-shadow: none;
}

.navbar .nav .dropdown-toggle .caret {
  margin-top: 8px;
}

.navbar .nav > li > a:focus,
.navbar .nav > li > a:hover {
  color: #FFFFFF;
  text-decoration: none;
  background-color: transparent;
}

.navbar .brand {
	color: #ffffff;
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}
.navbar span.brand:hover {
	color: #ffffff;
}
.dropdown-menu li > a:hover,
.dropdown-menu li > a:focus,
.dropdown-submenu:hover > a {
  color: #ffffff;
  text-decoration: none;
  background-color: #0d62bb;
  background-image: -moz-linear-gradient(top, #0d62bb, #0d62bb);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0d62bb), to(#0d62bb));
  background-image: -webkit-linear-gradient(top, #0d62bb, #0d62bb);
  background-image: -o-linear-gradient(top, #0d62bb, #0d62bb);
  background-image: linear-gradient(to bottom, #0d62bb, #0d62bb);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff9D100D', endColorstr='#ff7D100D', GradientType=0);
}

.navbar .nav > .active > a,
.navbar .nav > .active > a:hover,
.navbar .nav > .active > a:focus {
  color: #333333;
  text-decoration: none;
  background-color: #e5e5e5;
  -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
     -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
          box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
}

@media (max-width: 979px) {
  .navbar-fixed-top,
  .navbar-fixed-bottom {
      position: fixed;
      margin-left: 0px;
      margin-right: 0px;
  }
}

.SliderNameNavigation_2 { 
	margin: 0; 
	padding: 8px 0 0 0; 
	height: 20px; 
	text-align: center; 
	overflow-y: hidden; 
}

/* Box backgrounds */
.classic {
	padding: 0.8em 1em;
}

.custom {
	padding: 0.5em 0.8em 0.8em 2em;
}

.gradient { 
	border: 1.5px solid #2BB0D7;
	background-image: linear-gradient(bottom, rgb(217, 217, 217) 42%,
		rgb(255, 255, 255) 100% );
	background-image: -o-linear-gradient(bottom, rgb(217, 217, 217) 42%,
		rgb(255, 255, 255) 100% );
	background-image: -moz-linear-gradient(bottom, rgb(217, 217, 217) 42%,
		rgb(255, 255, 255) 100% );
	background-image: -webkit-linear-gradient(bottom, rgb(217, 217, 217) 42%,
		rgb(255, 255, 255) 100% );
	background-image: -ms-linear-gradient(bottom, rgb(217, 217, 217) 42%,
		rgb(255, 255, 255) 100% );
	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.42, rgb(217
		, 217, 217) ), color-stop(1, rgb(255, 255, 255) ) );
}
.critical {
	background: #FFCCAA;
	border: 1px solid #FF3334;
}
.warning {
	background: #FFFFAA;
	border: 1px solid #FFAD33;
}


.register-button {
    background-color: #1391c2;
    background-image: -moz-linear-gradient(top, #72b8c2,#1391c2);
    background-image: -webkit-linear-gradient(top,#72b8c2,#1391c2);
    background-image: linear-gradient(top,#72b8c2,#1391c2);
    -moz-box-shadow: 0 1px 1px rgba(0,0,0,.2);
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.2);
    box-shadow: 0 1px 1px rgba(0,0,0,.2);
    color: white;
    text-shadow: 0 1px rgba(0,0,0,.1);
    width: 200px;
    height: 48px;
    line-height: 48px;
    font-size: 150%;
    margin: 12px;
    border-color: #136a90;
}

.register-button:hover, .register-button:focus {
    border-color: #136a90;
    background-image: -moz-linear-gradient(top,#1391c2, #136a90);
    background-image: -webkit-linear-gradient(top,#1391c2, #136a90);
    background-image: linear-gradient(top,#1391c2, #136a90);
}

.content-box {
    background-color: white;
    border-radius: 6px;
    box-shadow: 0px 0px 4px rgba(0,0,0,.065);
    padding: 20px;
}

.box-narrow {
    max-width: 800px;
}

.navbar{
    margin-bottom: 30px;
}

a.disabled-link,
a.disabled-link:visited ,
a.disabled-link:active,
a.disabled-link:hover {
        background-color:#d9d9d9 !important;
        color:#aaa !important;
}

